2020-04-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Removed GLUT dependency / Started using SDL2 instead

2020-04-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Fixed build error on macOS
	* Modernized a bit

2014-03-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Moved to GitHub.

2013-01-06  vaiorabbit  <http://twitter.com/vaiorabbit>

	* rbRigidBody.cpp (UpdateInvInertiaWorld): I^-1 = R * I0^-1 * R^-1 -> I^-1 = R * I0^-1 * R^T
	* Added '[LANG en]' and '[LANG ja]' directives for future use.

2012-12-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* rbRigidBody.cpp: [BUG] Mass property should be considered on velocity update (state.linear_velocity += shape.inv_mass * dt * state.force;).
	* rbCollision.cpp: [BUG] Penetration depth should be updated on contact point modification.
	* rbMath.h: Removed rbReal cast operators (rbVec3::rbReal() and rbMtx3::rbReal())
	* rbMath.h: SetSkewSymmetric() is renamed to SetAsCrossProductMatrix.
	* rbTypes.h: RIGIDBOX_USE_ROW_MAJOR_MATRIX -> RIGIDBOX_USE_COLUMN_MAJOR_MATRIX

2012-04-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* rbMath.h (rbMtx3): Added 'Elem(row, col)' method to avoid the 'row/column major' issue.
	* rbTypes.h (RIGIDBOX_USE_ROW_MAJOR_MATRIX): Switches the element layout of rbMtx3 from column-major to row-major.

2012-03-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Renamed README.txt to README.ja.txt.
	* Added README.en.txt.

2011-07-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Open to public

2011-02-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Start